--- a/UnistraMobile/app/src/main/res/values/strings.xml
+++ b/UnistraMobile/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_annuaire">Annuaire</string>
+    <string name="title_activity_calendrier">CalendrierActivity</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_map">Map</string>
 
 </resources>
